--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,17 +6,14 @@
 @import "banner_blogs";
 @import "card_professional";
 @import "map";
-@import "container-all";
 @import "form-devise";
 @import "address_autocomplete";
 @import "grid";
 @import "small-rounded-circle";
 @import "search-bar";
-@import "bg_custom";
 @import "pricing";
 @import "home";
 @import "active_day";
-@import "btn_custom";
 @import "table";
 @import "card_blog";
 @import "service_categories";
@@ -35,3 +32,6 @@
 @import "blog";
 @import "why_boop";
 @import "devise_page";
+@import "row_wrap";
+@import "one_block_column";
+@import "cta_button";
