--- a/app/views/animals/_banner.html.erb
+++ b/app/views/animals/_banner.html.erb
@@ -10,7 +10,7 @@
         <p>
           Des animaux adorables attendent un foyer chaleureux. Adoptez dès aujourd'hui et offrez-leur une nouvelle vie pleine d'amour !
         </p>
-        <%= link_to "Rechercher", "#search-section", class: "cta-button", data: { turbo: false } %>
+        <%= link_to "Trouver un animal à adopter", "#search-section", class: "cta-button w-50", data: { turbo: false } %>
       </div>
 
       <div class="hero-image-wrapper">
