--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/back"%>
 </div>
 <%# bg-custom %>
-<div class="container">
+<div class="m-5">
   <%# title : Motif du Rendez-vous %>
   <div class="text-center mb-5 d-flex flex-row justify-content-center">
     <h1>Motif du Rendez-vous</h1>
@@ -103,7 +103,7 @@
               </div>
             </div>
             <!-- Bouton de soumission -->
-            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn_custom my-4", aria_label:"Confirmer"%>
+            <%= a.button :submit, "Confirmer le rendez-vous", class: "cta-button my-4", aria_label:"Confirmer"%>
           </div>
         </div>
       </div>
