--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="text-center my-4">
-      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn_custom ' %>
+      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'cta-button ' %>
 
   </div>
 </div>
