--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,7 +14,7 @@
       </ul>
 
     <div class="text-center">
-      <%= link_to "Revenir à la page d'accueil",root_path, class:"btn_custom" %>
+      <%= link_to "Revenir à la page d'accueil",root_path, class:"cta-button" %>
     </div>
     </div>
 </div>
