--- a/app/views/pages/_benefices_section.html.erb
+++ b/app/views/pages/_benefices_section.html.erb
@@ -1,34 +1,32 @@
-<div class="d-flex flex-wrap justify-content-center align-items-center gap-4 m-5">
+<div class="row_wrap">
   <!-- Carte Professionnels -->
-  <div class="position-relative card_pro d-flex flex-column justify-content-center align-items-center p-5" style="flex:1">
+  <div class="item position-relative card_pro one_block_column" style="flex:1">
     <div class="badge-explosive">🎁 6 mois gratuits</div>
     <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//pro.webp" alt="Bénéfices pour les professionnels animaliers d'utiliser Boop" class="image" />
-    <h3 class="my-2">Pour les professionnels</h3>
-    <p  class="my-2">
+    <h2>Pour les professionnels</h2>
+    <p>
       Gérez vos disponibilités et obtenez de nouveaux clients facilement
     </p>
     <ul class="card_list">
       <li>Gagnez en visibilité auprès des propriétaires d’animaux</li>
       <li>Profitez d’un outil de gestion de rendez-vous</li>
     </ul>
-    <div class="cta-buttons">
-      <a href="<%= why_boop_pro_path %>" class="btn btn-primary text-white" aria-label="En savoir plus pour les professionnels">Je veux en savoir plus</a>
-    </div>
+
+      <a href="<%= why_boop_pro_path %>" class="cta-button" aria-label="En savoir plus pour les professionnels">Je veux en savoir plus</a>
+
   </div>
   <!-- Carte Propriétaires -->
-  <div class="position-relative card_pro d-flex flex-column justify-content-center align-items-center p-5" style="flex:1">
+  <div class="item position-relative card_pro one_block_column" style="flex:1">
     <div class="badge-gratuit">🎉 Tout est gratuit</div>
     <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//proprietaire.webp" alt="Bénéfices pour les propriétaires des animaux d'utiliser Boop" class="image"/>
-    <h3 class="my-2">Pour les propriétaires d’animaux</h3>
-    <p  class="my-2">
+    <h2>Pour les propriétaires d’animaux</h2>
+    <p>
       Réservez un service et trouvez les meilleurs professionnels autour de vous
     </p>
     <ul class="card_list">
       <li>Prenez rendez-vous facilement avec des pros proches</li>
       <li>Accédez au carnet de santé numérique de vos animaux</li>
     </ul>
-    <div class="cta-buttons">
-      <a href="<%=why_boop_path%>" class="btn btn-primary text-white" aria-label="Prendre un rendez-vous">Je veux en savoir plus</a>
-    </div>
+      <a href="<%=why_boop_path%>" class="cta-button" aria-label="Prendre un rendez-vous">Je veux en savoir plus</a>
   </div>
 </div>
