--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -84,10 +84,10 @@
     <section class="about-section about-links">
       <h2>Explorer Boop</h2>
       <ul>
-        <li class="btn btn_custom"><%= link_to "Découvrir Boop Pro", why_boop_pro_path %></li>
-        <li class="btn btn_custom"><%= link_to "Retour à l'accueil", root_path %></li>
-        <li class="btn btn_custom"><%= link_to "Prendre un rendez-vous", explore_path %></li>
-        <li class="btn btn_custom"><%= link_to "Nos valeurs", "#valeurs" %></li>
+        <li class="btn cta-button"><%= link_to "Découvrir Boop Pro", why_boop_pro_path %></li>
+        <li class="btn cta-button"><%= link_to "Retour à l'accueil", root_path %></li>
+        <li class="btn cta-button"><%= link_to "Prendre un rendez-vous", explore_path %></li>
+        <li class="btn cta-button"><%= link_to "Nos valeurs", "#valeurs" %></li>
       </ul>
     </section>
   </section>
