--- a/app/views/pet_alerts/index.html.erb
+++ b/app/views/pet_alerts/index.html.erb
@@ -9,8 +9,8 @@
   <div class=" text-center mb-4 d-flex flex-row justify-content-center position-relative">
     <h1>Toutes les annonces</h1>
     <i class="fa-solid fa-paw float-end text-primary"></i>
-    <div class="position-absolute top-0 end-0 me-4 mt-3">
-    <%= link_to new_pet_alert_path, class:"btn btn-primary" do %>
+    <div class="position-absolute top-0 end-0 me-4">
+    <%= link_to new_pet_alert_path, class:"cta-button mb-2" do %>
       <i class="fa-solid fa-plus"></i> Ajouter une annonce
     <% end %>
 
