--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -40,7 +40,7 @@
         <%= a.input :comment, label: "Commentaire : ",
                               as: :text,
                               input_html: { rows: 3, style: "width: 100%" }%>
-        <%= a.submit "valider", class: "btn btn_custom", data: {controller: "alert", action: "click->alert#commentSave" }%>
+        <%= a.submit "valider", class: "btn cta-button", data: {controller: "alert", action: "click->alert#commentSave" }%>
       <% end %>
     </div>
   </div>
