--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -61,7 +61,7 @@
       </table>
       <%# submit button %>
       <div class="text-center my-4">
-        <%= p.button :submit, "Enregistrer", class: "btn_custom", data: {controller: "alert", action: "click->alert#loading" } %>
+        <%= p.button :submit, "Enregistrer", class: "cta-button", data: {controller: "alert", action: "click->alert#loading" } %>
       </div>
     <%end%>
   </div>
