--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -150,7 +150,7 @@
 </div>
 <%# submit button %>
 <div class="text-center my-4">
-  <%= p.button :submit, "Enregistrer", class: "btn_custom" %>
+  <%= p.button :submit, "Enregistrer", class: "cta-button" %>
 </div>
 </div>
 </div>
