--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-$pink : #EFA690;
+$pink : #f98c6e;
 $white: #fdfcfa;
-$light-pink: #F9F4EE;
+$light-pink: #faf8f5;
 $red-pink: #FFCCCC ;
