--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -13,7 +13,7 @@
               class: "form-control search-bar bg-white ps-5",
               placeholder: "Rechercher par ville..."
           %>
-          <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-4" %>
+          <%= submit_tag "Rechercher", class: "cta-button search-bar ms-4" %>
         </div>
       </div>
     <% end %>
