--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,71 +1,26 @@
-<div class="container-all">
+<div>
   <%= render "banner" %>
   <%= render "benefices_section"%>
-  <section class="wbp-faq mb-4">
-    <h2>Foire aux questions</h2>
-    <div class="accordion wbp-faq-list" id="accordionExample">
-      <div class="accordion-item wbp-faq-item">
-        <h3 class="accordion-header">
-          <button class="accordion-button wbp-faq-question collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-            Qu’est-ce que Boop et à qui s’adresse cette plateforme ?
-          </button>
-        </h3>
-        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            Boop est une web app dédiée à la santé et au bien-être des animaux de compagnie. Elle permet aux propriétaires de prendre rendez-vous facilement avec des professionnels animaliers (vétérinaires, toiletteurs, ostéopathes, etc.) et de gérer un carnet de santé numérique complet. Les professionnels indépendants bénéficient d’un outil simple de gestion et d’une visibilité locale.          </div>
-        </div>
-      </div>
-      <div class="accordion-item wbp-faq-item">
-        <h3 class="accordion-header">
-          <button class="accordion-button wbp-faq-question collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Comment prendre rendez-vous avec un professionnel animalier sur Boop ?
-          </button>
-        </h3>
-        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            Pour prendre rendez-vous, il suffit de :</br>- créer un compte propriétaire,</br>- créer un profil pour votre animal,</br>- rechercher le professionnel souhaité selon la spécialité et la localisation,</br>- sélectionner un créneau disponible.</br>La confirmation est immédiate et toutes les informations sont centralisées dans votre espace personnel.</br>Vous recevrez un mail de confirmation de votre rendez-vous.</br>Si vous ne voyez pas le mail, pensez à vérifier vos spams.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item wbp-faq-item">
-        <h3 class="accordion-header">
-          <button class="accordion-button wbp-faq-question collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Quels types de professionnels puis-je trouver sur Boop ?
-          </button>
-        </h3>
-        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            Boop regroupe une large communauté de professionnels animaliers : vétérinaires, éducateurs canins, toiletteurs, ostéopathes, promeneurs de chiens, nutritionnistes, et bien d’autres experts du bien-être animal.
-          </br> Allez sur la page <%= link_to "Nos professionnels", explore_path, class: "text-primary"%> pour découvrir.
-        </div>
-      </div>
-      </div>
-      <div class="accordion-item wbp-faq-item">
-        <h3 class="accordion-header">
-          <button class="accordion-button wbp-faq-question collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            Boop propose-t-il un carnet de santé numérique sécurisé ?
-          </button>
-        </h3>
-        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            Oui, Boop offre un carnet de santé numérique sécurisé et accessible à tout moment. Vous pouvez y stocker les vaccinations, traitements, rendez-vous et autres informations importantes pour assurer le suivi médical optimal de votre compagnon.
-          </br> Si vous avez des suggestions pour améliorer le carnet de santé, n'hésitez pas à nous contacter via le formulaire de contact.
-        </div>
-      </div>
-      </div>
-      <div class="accordion-item wbp-faq-item">
-        <h3 class="accordion-header">
-          <button class="accordion-button wbp-faq-question collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-            Comment les professionnels animaliers peuvent-ils rejoindre Boop ?
-          </button>
-        </h3>
-        <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            Les professionnels peuvent s’inscrire directement via la plateforme Boop pour gérer facilement leurs rendez-vous, améliorer leur visibilité locale et rejoindre une communauté engagée pour le bien-être animal. Une offre dédiée leur est proposée pour faciliter la transition vers le digital.
-          </br>Jetez un oeil à notre page <%= link_to "Prix", pricings_path, class: "text-primary" %> pour plus de détails.
-        </div>
-      </div>
-      </div>
-      </div>
-</section>
+  <div class="one_block_column">
+    <div class="text-center mt-5">
+      <h2>On vous emmène faire un tour ? </h2>
+      <p>Boop, c’est bien plus qu’un simple agenda animalier. C’est une plateforme pensée pour centraliser la santé, les rendez-vous et la vie de vos animaux. </Br>Que vous soyez professionnel, passionné ou juste gaga de votre boule de poils, Boop vous simplifie tout. Et franchement… c’est un peu ouf.</p>
+    </div>
+    <div>
+      <video class="card_pro mx-2 video" controls poster="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//intro_boop_thumnail_800.webp" alt="comment fonctionne boop?">
+        <source src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//intro_boop.webm" type="video/webm">
+        Votre navigateur ne supporte pas la vidéo.
+      </video>
+    </div>
+  </div>
+
+  <% if user_signed_in? %>
+
+      <a href="<%= pricings_path %>" class="cta-button" aria-label="Comment coute Boop">Je veux proposer un service</a>
+
+  <% else %>
+      <a href="<%= new_user_registration_path %>" class="cta-button" aria-label="Créer un compte">Créer un compte maintenant</a>
+  <% end %>
+  <%= render 'faq'%>
+
 </div>
