--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -6,30 +6,12 @@
   <h2 class="text-center mt-2">Tous nos professionnels</h2>
   <p class="text-center">Trouvez le professionnel qui correspond à vos besoins</p>
   <%# search zone %>
-  <div class="mb-2 d-flex justify-content-center mx-auto" >
-    <%= simple_form_for :search, url: professionals_path, method: :get, html: {class: "w-100", style: "max-width: 900px"} do |f| %>
-      <div class="d-flex justify-content-center search-form-control form-group" style="width: 100%;" >
-        <div class="d-flex align-items-center search-form-control form-group w-form">
-          <%= text_field_tag :query,
-              params[:query],
-              class: "form-control search-bar bg-white ps-5 w-75",
-              placeholder: "Rechercher un service..."
-          %>
-          <%= text_field_tag :query_address,
-              params[:query_address],
-              class: "form-control search-bar bg-white ps-5 w-25",
-              placeholder: "Ville..."
-          %>
-          <div>
-            <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-1" %>
-          </div>
-        </div>
-      </div>
-    <% end %>
+  <div class="search-section-index">
+    <%= render 'shared/search' %>
   </div>
 </div>
 <%# body %>
-<div class="container-all">
+<div>
   <% if @professionals.empty?%>
     <div class="d-flex flex-column justify-content-center align-items-center">
       <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//business-solution-removebg-preview.webp" alt="not found" >
