--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,7 +45,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-primary rounded-pill" %>
+            <%= link_to "Se connecter", new_user_session_path, class: "cta-button" %>
           </li>
         <% end %>
       </ul>
