--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -27,7 +27,6 @@
 @import "description_home";
 @import "commun";
 @import "show_pro";
-@import "setting_button";
 @import "about";
 @import "blog";
 @import "why_boop";
@@ -35,3 +34,5 @@
 @import "row_wrap";
 @import "one_block_column";
 @import "cta_button";
+@import "underline_btn";
+@import "footer";
