--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,26 +9,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto d-flex align-items-center gap-4">
         <li class="nav-item">
-          <%= link_to "Accueil", root_path, class: "nav-link"%>
+          <%= link_to "Accueil", root_path, class: "underline-btn text-black"%>
+        </li>
+        <li class="nav-item mx-3">
+          <%= link_to "Nos professionnels", explore_path, class: "underline-btn text-black"%>
         </li>
         <li class="nav-item">
-          <%= link_to "Nos professionnels", explore_path, class: "nav-link"%>
+          <%= link_to "Prix", pricings_path, class: "underline-btn text-black" %>
+        </li>
+        <li class="nav-item mx-3">
+          <%= link_to "Adopter", animals_path, class: "underline-btn text-black" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Prix", pricings_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Adopter", animals_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Pet Alert", pet_alerts_path, class: "nav-link" %>
+          <%= link_to "Pet Alert", pet_alerts_path, class: "underline-btn text-black" %>
         </li>
 
         <% if user_signed_in? %>
 
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown mx-3">
             <a href="#" class="d-flex align-items-center avatar-dropdown" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-decoration: none;">
-              <span class="nav-link" ><%= "#{current_user.first_name} #{current_user.last_name}" %></span>
+              <span class="underline-btn text-black" ><%= "#{current_user.first_name} #{current_user.last_name}" %></span>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
